Fix header spacing and add modal styling

--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,10 @@
   font-size: 35px;
   font-weight: bold;
   background-image: linear-gradient(#00b8e6, #057cc7);
-  margin: -10px -10px 10px -10px;
+  margin: 0px 0px 10px 0px;
   border-radius: 0px 0px 30px 30px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  padding: 15px 30px;
+  padding: 10px 0 10px 0;
   align-self: center;
 }
 
