--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,19 +1,55 @@
 .modal {
     position: fixed;
-    left: 0;
-    right: 0;
     top: 0;
+    left: 0;
     bottom: 0;
+    right: 0;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.modal-close-button {
+    color: white;
+    background: none;
+    border: none;
+    /* margin: 0px 0 12px 0; */
+}
+
+.modal-save-button {
+    border: none;
+    font-weight: bold;
+    background-image: linear-gradient(#00b8e6, #057cc7);
+    color: white;
+    border-radius: 10px;
+    padding: 10px 10px;
+    margin: 0 0 10px 0;
+    font-size: 14px;
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+}
+
+/* .modal-save-button:hover {
+
+} */
+
+.modal-cancel-button {
+    border: none;
+    font-weight: bold;
+    background-color: lightgrey;
+    color: black;
+    border-radius: 10px;
+    padding: 10px 10px;
+    margin: 0 0 10px 5px;
+    font-size: 14px;
+}
+
 .body {
     padding: 10px;
-    border-top: 1px solid #eee;
-    border-bottom: 1px solid #eee;
+}
+
+.modal-input {
+    width: 200px;
 }
 
 .title {
@@ -21,13 +57,25 @@
 }
 
 .content {
-    width: 500px;
+    width: 330px;
+    max-width: 100%;
+    height: 200px;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     background-color: #fff;
 }
 
 .header {
-    padding: 10px;
+    padding: 17px 10px;
+    background-color: #00b8e6;
     text-align: start;
+    color: white;
+    box-shadow: 0 0px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .footer {
